🙈 Update a .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
+# Ignore all files in the test directory
 test/
 
+# Ignore all executable files
 *.exe
 
-config.h
+# Ignore the specific configuration header file
+include/config.h
+
+# Ignore OS generated files
+.DS_Store
+Thumbs.db
+
+# Ignore logs and temporary files
+*.log
+*.tmp
+
+# Ignore compiled object files
+*.o
+*.obj
+
+# Ignore build directories
+build/
+dist/
+
+# Ignore IDE and editor specific files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
